// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelectorField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_12opk3l0 uv_12opk3l1"
        name="test"
      >
        <label
          class="uv_17td3g90 uv_12opk3l4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
        >
          label
        </label>
        <div
          class="uv_12opk3l6 uv_uf6pag0"
        >
          <div
            aria-controls="_r_2_"
            aria-describedby="_r_2_"
            class="uv_w40vpo9 uv_w40vpob"
            tabindex="-1"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <div
                aria-controls="_r_2_"
                aria-expanded="false"
                class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knda uv_1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_1_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_1ba7knd4 uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow1d uv_m4c9ow35"
                >
                  Select item
                </span>
                <div
                  class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="uv_12opk3la uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <title>
            RayStartArrowIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M2.5 10C2.5 9.61168 2.8148 9.29688 3.20312 9.29688L15.0063 9.29688L13.0372 7.46837C12.7526 7.20414 12.7361 6.75925 13.0004 6.47469C13.2646 6.19012 13.7095 6.17365 13.9941 6.43788L17.2753 9.48476C17.4186 9.6178 17.5 9.80449 17.5 10C17.5 10.1955 17.4186 10.3822 17.2753 10.5152L13.9941 13.5621C13.7095 13.8264 13.2646 13.8099 13.0004 13.5253C12.7361 13.2408 12.7526 12.7959 13.0372 12.5316L15.0063 10.7031L3.20313 10.7031C2.8148 10.7031 2.5 10.3883 2.5 10Z"
            fill-rule="evenodd"
          />
          <path
            d="M6.25 10C6.25 11.0355 5.41053 11.875 4.375 11.875C3.33947 11.875 2.5 11.0355 2.5 10C2.5 8.96447 3.33947 8.125 4.375 8.125C5.41053 8.125 6.25 8.96447 6.25 10Z"
          />
        </svg>
        <div
          class="uv_12opk3l8 uv_uf6pag0"
        >
          <div
            aria-controls="_r_7_"
            aria-describedby="_r_7_"
            class="uv_w40vpo9 uv_w40vpob"
            tabindex="-1"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <div
                aria-controls="_r_7_"
                aria-expanded="false"
                class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knd7 uv_1ba7knda uv_1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_6_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_1ba7knd4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow25"
                >
                  Select item
                </span>
                <div
                  class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_12opk3l0 uv_12opk3l1"
        name="test"
      >
        <label
          class="uv_17td3g90 uv_12opk3l4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
        >
          label
        </label>
        <div
          class="uv_12opk3l6 uv_uf6pag0"
        >
          <div
            aria-controls="_r_d_"
            aria-describedby="_r_d_"
            class="uv_w40vpo9 uv_w40vpob"
            tabindex="-1"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <div
                aria-controls="_r_d_"
                aria-expanded="false"
                class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knd7 uv_1ba7knda uv_1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_c_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_1ba7knd4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow25"
                >
                  Select item
                </span>
                <div
                  class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="uv_12opk3la uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <title>
            RayStartArrowIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M2.5 10C2.5 9.61168 2.8148 9.29688 3.20312 9.29688L15.0063 9.29688L13.0372 7.46837C12.7526 7.20414 12.7361 6.75925 13.0004 6.47469C13.2646 6.19012 13.7095 6.17365 13.9941 6.43788L17.2753 9.48476C17.4186 9.6178 17.5 9.80449 17.5 10C17.5 10.1955 17.4186 10.3822 17.2753 10.5152L13.9941 13.5621C13.7095 13.8264 13.2646 13.8099 13.0004 13.5253C12.7361 13.2408 12.7526 12.7959 13.0372 12.5316L15.0063 10.7031L3.20313 10.7031C2.8148 10.7031 2.5 10.3883 2.5 10Z"
            fill-rule="evenodd"
          />
          <path
            d="M6.25 10C6.25 11.0355 5.41053 11.875 4.375 11.875C3.33947 11.875 2.5 11.0355 2.5 10C2.5 8.96447 3.33947 8.125 4.375 8.125C5.41053 8.125 6.25 8.96447 6.25 10Z"
          />
        </svg>
        <div
          class="uv_12opk3l8 uv_uf6pag0"
        >
          <div
            aria-controls="_r_i_"
            aria-describedby="_r_i_"
            class="uv_w40vpo9 uv_w40vpob"
            tabindex="-1"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <div
                aria-controls="_r_i_"
                aria-expanded="false"
                class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knd7 uv_1ba7knda uv_1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_h_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_1ba7knd4 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow25"
                >
                  Select item
                </span>
                <div
                  class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_12opk3l0 uv_12opk3l1"
        name="test"
      >
        <label
          class="uv_17td3g90 uv_12opk3l4 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
        >
          label
        </label>
        <label
          class="uv_17td3g90 uv_12opk3l5 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
        >
          Second
        </label>
        <div
          class="uv_12opk3l6 uv_uf6pag0"
        >
          <div
            aria-controls="_r_o_"
            aria-describedby="_r_o_"
            class="uv_w40vpo9 uv_w40vpob"
            tabindex="-1"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <div
                aria-controls="_r_o_"
                aria-expanded="false"
                class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knda uv_1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_n_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_1ba7kndm uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u5p uv_toi52u5v"
                    style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                  >
                    <svg
                      class="uv_icons_1739vf22"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <title>
                        UbuntuLogo
                      </title>
                      <circle
                        cx="10"
                        cy="10"
                        fill="#f47421"
                        r="9"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="none"
                        r="4.365"
                        stroke="#ffffff"
                        stroke-width="1.71"
                      />
                      <g>
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.68752"
                        />
                        <path
                          d="M13.4,10H15.4"
                          stroke="#f47421"
                          stroke-width="0.64756"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#ffffff"
                          r="1.20149"
                        />
                      </g>
                      <g
                        transform="rotate(120,10,10)"
                      >
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.68752"
                        />
                        <path
                          d="M13.4,10H15.4"
                          stroke="#f47421"
                          stroke-width="0.64756"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#ffffff"
                          r="1.20149"
                        />
                      </g>
                      <g
                        transform="rotate(240,10,10)"
                      >
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.68752"
                        />
                        <path
                          d="M13.4,10H15.4"
                          stroke="#f47421"
                          stroke-width="0.64756"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#ffffff"
                          r="1.20149"
                        />
                      </g>
                    </svg>
                    Ubuntu
                  </div>
                </span>
                <div
                  class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="uv_12opk3la uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <title>
            RayStartArrowIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M2.5 10C2.5 9.61168 2.8148 9.29688 3.20312 9.29688L15.0063 9.29688L13.0372 7.46837C12.7526 7.20414 12.7361 6.75925 13.0004 6.47469C13.2646 6.19012 13.7095 6.17365 13.9941 6.43788L17.2753 9.48476C17.4186 9.6178 17.5 9.80449 17.5 10C17.5 10.1955 17.4186 10.3822 17.2753 10.5152L13.9941 13.5621C13.7095 13.8264 13.2646 13.8099 13.0004 13.5253C12.7361 13.2408 12.7526 12.7959 13.0372 12.5316L15.0063 10.7031L3.20313 10.7031C2.8148 10.7031 2.5 10.3883 2.5 10Z"
            fill-rule="evenodd"
          />
          <path
            d="M6.25 10C6.25 11.0355 5.41053 11.875 4.375 11.875C3.33947 11.875 2.5 11.0355 2.5 10C2.5 8.96447 3.33947 8.125 4.375 8.125C5.41053 8.125 6.25 8.96447 6.25 10Z"
          />
        </svg>
        <div
          class="uv_12opk3l8 uv_uf6pag0"
        >
          <div
            aria-controls="_r_t_"
            aria-describedby="_r_t_"
            class="uv_w40vpo9 uv_w40vpob"
            tabindex="-1"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
              style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
            >
              <div
                aria-controls="_r_t_"
                aria-expanded="false"
                class="uv_1ba7knd6 uv_1ba7knd5 uv_1ba7knda uv_1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_s_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_1ba7knd4 uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owj uv_m4c9ow1d uv_m4c9ow35"
                >
                  Select item
                </span>
                <div
                  class="uv_1ba7knd2 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;
